# devices-router

./: .gitignore  README.en.md  README.md  README.zh.md  build-exe.ps1  flow_keyboard_client.py  flow_keyboard_host_app.py  flow_keyboard_remote_app.py  flow_keyboard_server.py  install.ps1  requirements.txt  run-client.ps1  run-server.ps1
apps/desktop-tauri/: index.html  package-lock.json  package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: activity_transport.rs  app_state.rs  config.rs  core.rs  discovery.rs  elevation.rs  input.rs  keyboard_hook.rs  latency.rs  lib.rs  main.rs  mouse.rs  mouse_hook.rs  multi_host.rs  protocol.rs  routing.rs  sessions.rs  startup.rs  transport.rs  tray.rs  updates.rs
docs/: README.md  development-story.md  h5-remote-client.md  handoff-next-computer.zh.md  motivation.en.md  motivation.zh.md  mouse-roadmap.zh.md  roadmap.zh.md  tauri-rust-roadmap.md  technical-retrospective.md  troubleshooting.en.md  troubleshooting.zh.md  ui-scrolling-contract.zh.md  update-workflow.md  user-guide.en.md  user-guide.zh.md  video-outline.en.md  video-outline.md  video-outline.zh.md
docs/releases/: v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  (+19 more)
flow_keyboard_bridge/: __init__.py  app_info.py  client.py  discovery.py  firewall.py  gui.py  h5_remote.py  keyboard_router.py  keynames.py  protocol.py  server.py  target_state.py  updates.py  win_input.py  win_keyboard_hook.py  win_mouse.py
tests/: test_desktop_layout_contract.py  test_discovery.py  test_h5_remote.py  test_keyboard_router.py  test_keynames.py  test_protocol.py  test_server_handshake.py  test_target_state.py  test_update_manifest.py  test_win_input.py
(+6 files in other folders)
