[package]
name = "devices-router"
version = "0.1.7"
description = "Keyboard routing companion for Logitech Flow"
authors = ["Yourset"]
edition = "2021"

[lib]
name = "devices_router_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.0", features = [] }
tauri-plugin-updater = "2.9.0"
thiserror = "2.0"
local-ip-address = "0.6"
sha2 = "0.10"
windows = { version = "0.62.0", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[dev-dependencies]
tempfile = "3.23"
